--- a/index.html
+++ b/index.html
@@ -1,26 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-<div class="container-p">
-    <div class="container-1">
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+
+  <body>
+    <div class="container-p2">
+      <div class="container-1">
         <h1 class="title-1">Animation</h1>
         <h2 class="title-2">qkshdlqsj</h2>
+      </div>
+      <div class="container-2">
+        <button type="button" class="button-1"></button>
+        <button type="button" class="button-1"></button>
+        <button type="button" class="button-1"></button>
+      </div>
     </div>
-
-    <div class="container-2">
-        <button type="button"></button>
-        <button type="button"></button>
-        <button type="button"></button>
-    </div>
-</div>
-    <div></div>
-
+    <div class="container-p3">
+      <div class="container-3">
+        <h1 class="title-3">A propos</h1>
+      </div>
+      <div class="container-4">
+        <p class="text-1">
+          wsexdrkzhkqshdkqshdkjqshkdhqskdhqskdhqskdkshdqskhdkqshdkqshdkqshdkqshdkqshdkqshdqskdhshdqsjkhdqshdkqshdkqshdkqshdkjqhdkhqskdhqskdhsjkhdkqshdkqshdkhqskdhqkhdyuhsrguhijxdrgvyuhinwsrgvybuhixdrgvybuhnijxsrdtgvubhi
+        </p>
+        <img src="./img/pdp.jpeg" class="img-1">
+      </div>
+      <div class="container-p4">
+        <div class="container-5">
+          <h1 class="title-4">Mes Projets</h1>
+        </div>
+        <div class="container-6">
+          <div class="card">
+            <p>kqshdkqshdkqsh</p>
+          </div>
+        </div>
+      </div>
     <script type="module" src="./src/preloader.js"></script>
-</body>
+  </body>
 </html>
