--- a/index.html
+++ b/index.html
@@ -35,10 +35,34 @@
         </div>
         <div class="container-6">
           <div class="card">
-            <p>kqshdkqshdkqsh</p>
+            <p>kqshdkqshdkqsh1</p>
+          </div>
+          <div class="card">
+            <p>kqshdkqshdkqsh2</p>
+          </div>
+          <div class="card">
+            <p>kqshdkqshdkqsh3</p>
+          </div>
+          <div class="card">
+            <p>kqshdkqshdkqsh4</p>
+          </div>
+          <div class="card">
+            <p>kqshdkqshdkqsh5</p>
+          </div>
+           <div class="card">
+            <p>kqshdkqshdkqsh6</p>
           </div>
         </div>
       </div>
+      <div class="container-p5">
+        <div class="container-7">
+          <p class="name">qsljdlqsjdlqjdlqsj</p>
+          <p class="prof">iqjdlqjsdlj</p>
+          <p class="spe">qskljdlqsjdlqsjdl</p>
+        </div>
+      </div>
+
+      <script src="./src/card.js"></script>
     <script type="module" src="./src/preloader.js"></script>
   </body>
 </html>
